--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="number" min="0" class="input2" placeholder="Delay">
         </div>
         <div class="LEDs"></div>
-        <img src="images/led.png" id="imager" alt="">
+        <!-- <img src="images/led.png" id="imager" alt=""> -->
     </div>
     <script src="script.js"></script>
 </body>
